--- a/demo/style.css
+++ b/demo/style.css
@@ -14,30 +14,41 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+#sun {
+  width: 100px;
+  height: 100px;
+}
 
-
-.track {
-    /* animation-iteration-count: infinite; */
-    /* transform: rotate(360deg); */
+.orbit {
     position: absolute;
-    top: 75px;
-    left: 75px;
-    border: 2px #4A437F dashed;
-    border-radius: 100%;
-    width: 150px;
-    height:150px;
-    -webkit-animation: spin-right 10s linear infinite;
-  animation: spin-right 10s linear infinite;
+    border: 1px #ffffff dashed;
+    border-radius: 50%;
+    width: var(--orbitdimension);
+    height: var(--orbitdimension);
+    animation: spin-right var(--orbitperiod) linear infinite;
 }
+
+.planet {
+  position: absolute;
+  top: var(--makecenter);
+  left: var(--makecenter);
+  background-image: var(--planetimage); 
+  width: var(--planetdimension);
+  height: var(--planetdimension);
+  animation: spin-right var(--planetperiod) linear infinite;
+  z-index: 100;
+  background-size: cover;
+
+}
+
+
 @keyframes spin-right {
     100% {
-      -webkit-transform: rotate(360deg);
-      -moz-transform: rotate(360deg);
-      -ms-transform: rotate(360deg);
-      -o-transform: rotate(360deg);
       transform: rotate(360deg);
     }
   }
